--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,13 +2,13 @@
     <div class="col-md-6">
         <a href="#!listings" class="listing-img">
             <h1>For Sale</h1>
-            <img src="assets/img1.png" alt="Listing Image" class="img-responsive">
+            <img src="assets/img1.png" alt="Listing Image" class="img-fluid">
         </a>
     </div>
     <div class="col-md-6">
         <a href="#!rentals" class="listing-img">
             <h1>For Rent</h1>
-            <img src="assets/img2.png" alt="Listing Image" class="img-responsive">
+            <img src="assets/img2.png" alt="Listing Image" class="img-fluid">
         </a>
     </div>
 </div>
